<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BathActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <Toolbar
        android:id="@+id/toolbarVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bath_tittle"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/colorText" />


        </LinearLayout>
    </Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageViewBaño"
            android:layout_width="0dp"
            android:layout_height="165dp"
            android:layout_marginTop="50dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewInfoBaño"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bathe1" />

        <TextView
            android:id="@+id/textViewInfoBaño"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/text_view_info_baño"
            app:layout_constraintBottom_toTopOf="@+id/radioGroupBaths"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewBaño" />

        <RadioGroup
            android:id="@+id/radioGroupBaths"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonAceptarBaño"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewInfoBaño">

            <RadioButton
                android:id="@+id/radioButtonBañoBasico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_box_baño_basico" />

            <TextView
                android:id="@+id/textViewInfoBañoBasico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_baño_basico"
                android:textAlignment="center" />

            <RadioButton
                android:id="@+id/radioButtonBañoCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_box_baño_completo" />

            <TextView
                android:id="@+id/textViewInfoBañoCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_baño_completo"
                android:textAlignment="center" />

            <RadioButton
                android:id="@+id/radioButtonBañoPremium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_box_baño_premium" />

            <TextView
                android:id="@+id/textViewInfoBañoPremium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_baño_premium"
                android:textAlignment="center" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonAceptarBaño"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="onClickButtonPago3"
            android:text="@string/button_aceptar_baño"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupBaths" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>