<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HairActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <Toolbar
        android:id="@+id/toolbarVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_peluqueria"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/colorText" />


        </LinearLayout>
    </Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewPeluquería"
            android:layout_width="0dp"
            android:layout_height="165dp"
            android:layout_marginTop="35dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewInfoPeluqueria"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pedicure" />

        <TextView
            android:id="@+id/textViewInfoPeluqueria"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:text="@string/text_view_info_peluqueria"
            app:layout_constraintBottom_toTopOf="@+id/radioGroupHair"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewPeluquería" />

        <RadioGroup
            android:id="@+id/radioGroupHair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/buttonChooseAceptarPeluqueria"
            app:layout_constraintEnd_toEndOf="@+id/textViewInfoPeluqueria"
            app:layout_constraintStart_toStartOf="@+id/textViewInfoPeluqueria"
            app:layout_constraintTop_toBottomOf="@+id/textViewInfoPeluqueria">

            <RadioButton
                android:id="@+id/radioButtonPeluqueriaBasico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_box_servicio_basico" />

            <TextView
                android:id="@+id/textViewPeluqueriaBasico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_servicio_basico"
                android:textAlignment="center" />

            <RadioButton
                android:id="@+id/radioButtonPeluqueriaCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_box_servicio_completo" />

            <TextView
                android:id="@+id/textViewPeluqueriaCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_servicio_completo"
                android:textAlignment="center" />

            <RadioButton
                android:id="@+id/radioButtonPeluqueriaPremium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_box_servicio_premium" />

            <TextView
                android:id="@+id/textViewPeluqueriaPremium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_servicio_premium"
                android:textAlignment="center" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonChooseAceptarPeluqueria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="onClickButtonPago2"
            android:text="@string/button_aceptar_peluqueria"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupHair" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>