<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalkActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <Toolbar
        android:id="@+id/toolbarVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/walk_tittle"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/colorText" />


        </LinearLayout>
    </Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageViewPaseo"
            android:layout_width="0dp"
            android:layout_height="165dp"
            android:layout_marginTop="48dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewInfoPaseo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/take" />

        <TextView
            android:id="@+id/textViewInfoPaseo"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/text_view_info_paseo"
            app:layout_constraintBottom_toTopOf="@+id/radioGroupWalks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewPaseo" />

        <RadioGroup
            android:id="@+id/radioGroupWalks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonAceptarPaseo"
            app:layout_constraintEnd_toEndOf="@+id/textViewInfoPaseo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/textViewInfoPaseo"
            app:layout_constraintTop_toBottomOf="@+id/textViewInfoPaseo">

            <RadioButton
                android:id="@+id/radioButton30Minutos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_box_30_minutos" />

            <RadioButton
                android:id="@+id/radioButton1Hora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_box_1_hora" />

            <RadioButton
                android:id="@+id/radioButton1MediaHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_box_1_30_horas" />

            <RadioButton
                android:id="@+id/radioButton2Horas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_box_2_horas" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonAceptarPaseo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="onClickButtonPago4"
            android:text="@string/button_aceptar_paseo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupWalks" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>