<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pagoTarjetaActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <Toolbar
        android:id="@+id/toolbarPagoTarjeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pago_tarjeta_tittle"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/colorText" />


        </LinearLayout>
    </Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/efectivojpg">

        <TextView
            android:id="@+id/textViewDatosPago"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="Datos de pago:"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNumeroTarjeta"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/text_view_numero_tarjeta"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDatosPago" />

        <EditText
            android:id="@+id/editTextNumeroTarjeta"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/edit_text_numero_tarjeta"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNumeroTarjeta" />

        <TextView
            android:id="@+id/textViewFechaCaduca"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:text="@string/text_view_fecha_caducidad"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumeroTarjeta" />

        <EditText
            android:id="@+id/editTextFechaCaduca"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/edit_text_fecha_caducidad"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewFechaCaduca" />

        <TextView
            android:id="@+id/textViewTitularTarjeta"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:text="@string/text_view_titular_tarjeta"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextFechaCaduca" />

        <EditText
            android:id="@+id/editTextTitularTarjeta"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/edit_text_titular_tarjeta"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitularTarjeta" />

        <TextView
            android:id="@+id/textViewCVV"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:text="@string/text_view_cvv"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTitularTarjeta" />

        <EditText
            android:id="@+id/editTextCVV"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/text_view_cvv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCVV" />

        <Button
            android:id="@+id/buttonAceptarPagoTarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="OnClickAceptarTarjeta"
            android:text="Aceptar "
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>