<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".metodoPagoActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <Toolbar
        android:id="@+id/toolbarMetodoPago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metodo_pago_tittle"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/colorText" />


        </LinearLayout>
    </Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/efectivo">

        <TextView
            android:id="@+id/textViewEscogerMetodoPago"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:text="@string/text_view_escoger_metodo_pago"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonEfectivo"
            android:layout_width="128dp"
            android:layout_height="54dp"
            android:layout_marginTop="440dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="OnClickEfectivo"
            android:text="@string/button_efectivo"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEscogerMetodoPago" />

        <Button
            android:id="@+id/buttonTarjeta"
            android:layout_width="127dp"
            android:layout_height="54dp"
            android:layout_marginTop="176dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="OnClickTarjeta"
            android:text="@string/button_tarjeta"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/buttonEfectivo"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="@+id/buttonEfectivo"
            app:layout_constraintTop_toBottomOf="@+id/textViewEscogerMetodoPago" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>